style: fix code smells p.4